--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,20 @@
 
 body{
 	margin-top: 30px;
-	margin-left: 100px;
+	margin-left: 200px;
 	margin-right: 200px;
 
 }
+*{
+	margin-bottom: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-top: 0px;
+	padding-bottom: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
+	padding-top: 0px;
+	}
 
 #menu ul li{
 	/*position:relative;*/
